# petal

./: .clang-format  .clangd  .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install-compiler.sh  install.sh  rustfmt.toml
docs/: README.md  function_declarations.md  functions.md  installation.md  petal-virtual-machine.md
examples/: 00_hello_world.idk  00_hello_world.petal  00_init.petal  00_main_function.petal  01_binary_operation.petal  01_binary_operations.petal  01_function_call.petal  01_function_calls.petal  01_variable_declaration.idk  01_variable_declaration.petal  02_binary_operations.petal  02_function_arguments.petal  02_function_call.petal  02_function_calls.petal  02_function_calls_and_parameters.petal  02_function_declaration.idk  02_function_declaration.petal  02_function_parameters.petal  03_binary_operation.petal  03_builtin_functions.petal  03_external_functions.petal  03_function_calls_and_parameters.petal  03_identifier_reference.idk  03_many_parameters.petal  03_variable_reassignment.petal  04_binary_operations.petal  04_external_functions.petal  04_function_calls.idk  04_function_calls.petal  04_references.petal  05_control_flow.petal  (+53 more)
petal-cli/: Cargo.toml
petal-cli/src/: compiler_state.rs  main.rs  module.rs
petal-cli/src/args/: error.rs  mod.rs
petal-llvm-codegen/: Cargo.toml
petal-llvm-codegen/src/: context.rs  error.rs  lib.rs  string_intern_pool_ext.rs
petal-llvm-codegen/src/codegen/: expression.rs  mod.rs  statement.rs  top_level_statement.rs
petal-llvm-codegen/src/context/: mod.rs  scope.rs
(+418 files in other folders)
