[package]
name = "petal"
version = "0.1.0"
edition = "2024"

[dependencies]
petal-ast = { path = "../petal-ast" }
petal-core = { path = "../petal-core" }
petal-codegen-driver = { path = "../petal-codegen-driver" }
petal-lexer = { path = "../petal-lexer" }
petal-llvm-codegen = { path = "../petal-llvm-codegen" }
petal-typechecker = { path = "../petal-typechecker" }

colored = "3.0.0"
pico-args = "0.5.0"
enum-display = "0.2.1"
