[package]
name = "petal-llvm-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
petal-ast = { path = "../petal-ast" }
petal-core = { path = "../petal-core" }
petal-typechecker = { path = "../petal-typechecker" }

inkwell = { version = "0.6.0", default-features = false, features = [
    "llvm18-1",
    "target-arm",
    "target-x86",
] }
enum-display = "0.2.1"
